EPIC API追加
