# src/api/base.ts
@@ -89,4 +89,10 @@ export const operationServerMap: ServerMap = {
             description: "No description provided",
         }
     ],
+    "EPICApi.getEpicNatural": [
+        {
+            url: "https://api.nasa.gov",
+            description: "No description provided",
+        }
+    ],
 }
